fix java decode exception